# Delgado-Logger

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml
delgado_logger/: __init__.py  logger.py
