[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delgado_logger"
version = "1.2.1"
description = "A lightweight logging utility with value inspection and optional Black formatting."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Delgado", email = "pyrometheous@gmail.com" }]
dependencies = [
    "black>=24.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
